[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scs-scanner"
version = "1.0.0"
description = "SCS: A fast and versatile network scanner"
readme = "README.md"
authors = [{name = "SuvScd", email = "suvsd@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["security", "networking", "scanner", "cybersecurity", "pentest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "scapy>=2.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
scs = "discn.cli:cli"

[project.urls]
Homepage = "https://github.com/YourUsername/SCS"
Repository = "https://github.com/YourUsername/SCS.git"
Issues = "https://github.com/YourUsername/SCS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["discn*"]

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
