[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsuvax-scanner"
version = "2.0.0"
description = "NETSUVAX: A next-generation, high-performance network scanner"
readme = "README.md"
authors = [{name = "SuvScd", email = "suvsd@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["security", "networking", "scanner", "cybersecurity", "pentest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "scapy>=2.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
netsuvax = "discn.cli:cli"

[project.urls]
Homepage = "https://github.com/suvscd-io/NETSUVAX"
Repository = "https://github.com/suvscd-io/NETSUVAX.git"
Issues = "https://github.com/suvscd-io/NETSUVAX/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["discn*"]

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
